Wed Oct 17 11:04:48 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_hash.rb (TestHash#test_dup_equality): added a new test
	  to show the problem of r37232.

Wed Oct 17 10:48:40 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_insnhelper.c (vm_search_method): fix a build error that occurs 
	  when OPT_INLINE_METHOD_CACHE is 0.

Wed Oct 17 08:46:47 2012  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_vm2_dstr.rb: add a benchmark to measure
	  performance of dynamic generated string ("foo#{bar}baz").

Wed Oct 17 08:32:46 2012  Koichi Sasada  <ko1@atdot.net>

	* compile.c (compile_dstr_fragments): use `putobject' instead of
	  `putstring' for all of strings used by NODE_DSTR because
	  ruby users can not grab this string.
	  For example, the string object of "baz" in "foo#{bar}baz"
	  is located by `putobject' (users can not touch "baz" object
	  directly). This change reduces GC pressure.
	  This improvement is suggested by Aaron Patterson.

Wed Oct 17 08:02:57 2012  Koichi Sasada  <ko1@atdot.net>

	* thread.c (rb_threadptr_interrupt_mask): fix to check interrupt
	  after interrupt_mask changed.

Wed Oct 17 06:42:47 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_call_method): fix to return value immediately.
	  Remove CHECK_INTS() after that method dispatch.

Wed Oct 17 06:25:56 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* hash.c (initialize_copy): copy the underlying st_table on dup,
	  rather than copying the hash key by key. [ruby-core:48009]

	* test/ruby/test_hash.rb: relevant tests for initialize_copy

Wed Oct 17 06:17:44 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_call_iseq_setup_2): separate tailcall and normal
	  method frame setup functions.
	  Add checking interrupts at the tailcall setup function.

Wed Oct 17 05:35:37 2012  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_vm1_yield.rb: add a benchmark to measure `yield'
	  (invoke empty block) performance.
